src/bindings.rs

pub const mir_sdr_rspDuo_TunerSelT_mir_sdr_rspDuo_Tuner_1: mir_sdr_rspDuo_TunerSelT = 1;
pub const mir_sdr_rspDuo_TunerSelT_mir_sdr_rspDuo_Tuner_2: mir_sdr_rspDuo_TunerSelT = 2;
pub type mir_sdr_rspDuo_TunerSelT = u32;
pub type mir_sdr_StreamCallback_t = ::std::option::Option<
    unsafe extern "C" fn(
        xi: *mut ::std::os::raw::c_short,
        xq: *mut ::std::os::raw::c_short,
        firstSampleNum: ::std::os::raw::c_uint,
        grChanged: ::std::os::raw::c_int,
        rfChanged: ::std::os::raw::c_int,
        fsChanged: ::std::os::raw::c_int,
        numSamples: ::std::os::raw::c_uint,
        reset: ::std::os::raw::c_uint,
        hwRemoved: ::std::os::raw::c_uint,
        cbContext: *mut ::std::os::raw::c_void,
    ),
>;
pub type mir_sdr_GainChangeCallback_t = ::std::option::Option<
    unsafe extern "C" fn(
        gRdB: ::std::os::raw::c_uint,
        lnaGRdB: ::std::os::raw::c_uint,
        cbContext: *mut ::std::os::raw::c_void,
    ),
>;
pub type mir_sdr_Init_t = ::std::option::Option<
    unsafe extern "C" fn(
        gRdB: ::std::os::raw::c_int,
        fsMHz: f64,
        rfMHz: f64,
        bwType: mir_sdr_Bw_MHzT,
        ifType: mir_sdr_If_kHzT,
        samplesPerPacket: *mut ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_Uninit_t = ::std::option::Option<unsafe extern "C" fn() -> mir_sdr_ErrT>;
pub type mir_sdr_ReadPacket_t = ::std::option::Option<
    unsafe extern "C" fn(
        xi: *mut ::std::os::raw::c_short,
        xq: *mut ::std::os::raw::c_short,
        firstSampleNum: *mut ::std::os::raw::c_uint,
        grChanged: *mut ::std::os::raw::c_int,
        rfChanged: *mut ::std::os::raw::c_int,
        fsChanged: *mut ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetRf_t = ::std::option::Option<
    unsafe extern "C" fn(
        drfHz: f64,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetFs_t = ::std::option::Option<
    unsafe extern "C" fn(
        dfsHz: f64,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
        reCal: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetGr_t = ::std::option::Option<
    unsafe extern "C" fn(
        gRdB: ::std::os::raw::c_int,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetGrParams_t = ::std::option::Option<
    unsafe extern "C" fn(
        minimumGr: ::std::os::raw::c_int,
        lnaGrThreshold: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetDcMode_t = ::std::option::Option<
    unsafe extern "C" fn(
        dcCal: ::std::os::raw::c_int,
        speedUp: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetDcTrackTime_t =
    ::std::option::Option<unsafe extern "C" fn(trackTime: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
pub type mir_sdr_SetSyncUpdateSampleNum_t =
    ::std::option::Option<unsafe extern "C" fn(sampleNum: ::std::os::raw::c_uint) -> mir_sdr_ErrT>;
pub type mir_sdr_SetSyncUpdatePeriod_t =
    ::std::option::Option<unsafe extern "C" fn(period: ::std::os::raw::c_uint) -> mir_sdr_ErrT>;
pub type mir_sdr_ApiVersion_t =
    ::std::option::Option<unsafe extern "C" fn(version: *mut f32) -> mir_sdr_ErrT>;
pub type mir_sdr_ResetUpdateFlags_t = ::std::option::Option<
    unsafe extern "C" fn(
        resetGainUpdate: ::std::os::raw::c_int,
        resetRfUpdate: ::std::os::raw::c_int,
        resetFsUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetTransferMode_t =
    ::std::option::Option<unsafe extern "C" fn(mode: mir_sdr_TransferModeT) -> mir_sdr_ErrT>;
pub type mir_sdr_DownConvert_t = ::std::option::Option<
    unsafe extern "C" fn(
        in_: *mut ::std::os::raw::c_short,
        xi: *mut ::std::os::raw::c_short,
        xq: *mut ::std::os::raw::c_short,
        samplesPerPacket: ::std::os::raw::c_uint,
        ifType: mir_sdr_If_kHzT,
        M: ::std::os::raw::c_uint,
        preReset: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetParam_t = ::std::option::Option<
    unsafe extern "C" fn(id: ::std::os::raw::c_uint, value: ::std::os::raw::c_uint) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetPpm_t = ::std::option::Option<unsafe extern "C" fn(ppm: f64) -> mir_sdr_ErrT>;
pub type mir_sdr_SetLoMode_t =
    ::std::option::Option<unsafe extern "C" fn(loMode: mir_sdr_LoModeT) -> mir_sdr_ErrT>;
pub type mir_sdr_SetGrAltMode_t = ::std::option::Option<
    unsafe extern "C" fn(
        gRidx: *mut ::std::os::raw::c_int,
        LNAstate: ::std::os::raw::c_int,
        gRdBsystem: *mut ::std::os::raw::c_int,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_DCoffsetIQimbalanceControl_t = ::std::option::Option<
    unsafe extern "C" fn(
        DCenable: ::std::os::raw::c_uint,
        IQenable: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_DecimateControl_t = ::std::option::Option<
    unsafe extern "C" fn(
        enable: ::std::os::raw::c_uint,
        decimationFactor: ::std::os::raw::c_uint,
        wideBandSignal: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_AgcControl_t = ::std::option::Option<
    unsafe extern "C" fn(
        enable: mir_sdr_AgcControlT,
        setPoint_dBfs: ::std::os::raw::c_int,
        knee_dBfs: ::std::os::raw::c_int,
        decay_ms: ::std::os::raw::c_uint,
        hang_ms: ::std::os::raw::c_uint,
        syncUpdate: ::std::os::raw::c_int,
        LNAstate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_StreamInit_t = ::std::option::Option<
    unsafe extern "C" fn(
        gRdB: *mut ::std::os::raw::c_int,
        fsMHz: f64,
        rfMHz: f64,
        bwType: mir_sdr_Bw_MHzT,
        ifType: mir_sdr_If_kHzT,
        LNAstate: ::std::os::raw::c_int,
        gRdBsystem: *mut ::std::os::raw::c_int,
        setGrMode: mir_sdr_SetGrModeT,
        samplesPerPacket: *mut ::std::os::raw::c_int,
        StreamCbFn: mir_sdr_StreamCallback_t,
        GainChangeCbFn: mir_sdr_GainChangeCallback_t,
        cbContext: *mut ::std::os::raw::c_void,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_StreamUninit_t = ::std::option::Option<unsafe extern "C" fn() -> mir_sdr_ErrT>;
pub type mir_sdr_Reinit_t = ::std::option::Option<
    unsafe extern "C" fn(
        gRdB: *mut ::std::os::raw::c_int,
        fsMHz: f64,
        rfMHz: f64,
        bwType: mir_sdr_Bw_MHzT,
        ifType: mir_sdr_If_kHzT,
        loMode: mir_sdr_LoModeT,
        LNAstate: ::std::os::raw::c_int,
        gRdBsystem: *mut ::std::os::raw::c_int,
        setGrMode: mir_sdr_SetGrModeT,
        samplesPerPacket: *mut ::std::os::raw::c_int,
        reasonForReinit: mir_sdr_ReasonForReinitT,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_GetGrByFreq_t = ::std::option::Option<
    unsafe extern "C" fn(
        rfMHz: f64,
        band: *mut mir_sdr_BandT,
        gRdB: *mut ::std::os::raw::c_int,
        LNAstate: ::std::os::raw::c_int,
        gRdBsystem: *mut ::std::os::raw::c_int,
        setGrMode: mir_sdr_SetGrModeT,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_DebugEnable_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_uint) -> mir_sdr_ErrT>;
pub type mir_sdr_GetCurrentGain_t =
    ::std::option::Option<unsafe extern "C" fn(gainVals: *mut mir_sdr_GainValuesT) -> mir_sdr_ErrT>;
pub type mir_sdr_GainChangeCallbackMessageReceived_t =
    ::std::option::Option<unsafe extern "C" fn() -> mir_sdr_ErrT>;
pub type mir_sdr_GetDevices_t = ::std::option::Option<
    unsafe extern "C" fn(
        devices: *mut mir_sdr_DeviceT,
        numDevs: *mut ::std::os::raw::c_uint,
        maxDevs: ::std::os::raw::c_uint,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_SetDeviceIdx_t =
    ::std::option::Option<unsafe extern "C" fn(idx: ::std::os::raw::c_uint) -> mir_sdr_ErrT>;
pub type mir_sdr_ReleaseDeviceIdx_t = ::std::option::Option<unsafe extern "C" fn() -> mir_sdr_ErrT>;
pub type mir_sdr_GetHwVersion_t =
    ::std::option::Option<unsafe extern "C" fn(ver: *mut ::std::os::raw::c_uchar) -> mir_sdr_ErrT>;
pub type mir_sdr_RSPII_AntennaControl_t = ::std::option::Option<
    unsafe extern "C" fn(select: mir_sdr_RSPII_AntennaSelectT) -> mir_sdr_ErrT,
>;
pub type mir_sdr_RSPII_ExternalReferenceControl_t = ::std::option::Option<
    unsafe extern "C" fn(output_enable: ::std::os::raw::c_uint) -> mir_sdr_ErrT,
>;
pub type mir_sdr_RSPII_BiasTControl_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_uint) -> mir_sdr_ErrT>;
pub type mir_sdr_RSPII_RfNotchEnable_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_uint) -> mir_sdr_ErrT>;
pub type mir_sdr_RSP_SetGr_t = ::std::option::Option<
    unsafe extern "C" fn(
        gRdB: ::std::os::raw::c_int,
        LNAstate: ::std::os::raw::c_int,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT,
>;
pub type mir_sdr_RSP_SetGrLimits_t =
    ::std::option::Option<unsafe extern "C" fn(minGr: mir_sdr_MinGainReductionT) -> mir_sdr_ErrT>;
pub type mir_sdr_AmPortSelect_t =
    ::std::option::Option<unsafe extern "C" fn(port: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
pub type mir_sdr_rsp1a_BiasT_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
pub type mir_sdr_rsp1a_DabNotch_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
pub type mir_sdr_rsp1a_BroadcastNotch_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
pub type mir_sdr_rspDuo_TunerSel_t =
    ::std::option::Option<unsafe extern "C" fn(sel: mir_sdr_rspDuo_TunerSelT) -> mir_sdr_ErrT>;
pub type mir_sdr_rspDuo_ExtRef_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
pub type mir_sdr_rspDuo_BiasT_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
pub type mir_sdr_rspDuo_Tuner1AmNotch_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
pub type mir_sdr_rspDuo_BroadcastNotch_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
pub type mir_sdr_rspDuo_DabNotch_t =
    ::std::option::Option<unsafe extern "C" fn(enable: ::std::os::raw::c_int) -> mir_sdr_ErrT>;
extern "C" {
    pub fn mir_sdr_Init(
        gRdB: ::std::os::raw::c_int,
        fsMHz: f64,
        rfMHz: f64,
        bwType: mir_sdr_Bw_MHzT,
        ifType: mir_sdr_If_kHzT,
        samplesPerPacket: *mut ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_Uninit() -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_ReadPacket(
        xi: *mut ::std::os::raw::c_short,
        xq: *mut ::std::os::raw::c_short,
        firstSampleNum: *mut ::std::os::raw::c_uint,
        grChanged: *mut ::std::os::raw::c_int,
        rfChanged: *mut ::std::os::raw::c_int,
        fsChanged: *mut ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetRf(
        drfHz: f64,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetFs(
        dfsHz: f64,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
        reCal: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetGr(
        gRdB: ::std::os::raw::c_int,
        abs: ::std::os::raw::c_int,
        syncUpdate: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetGrParams(
        minimumGr: ::std::os::raw::c_int,
        lnaGrThreshold: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
extern "C" {
    pub fn mir_sdr_SetDcMode(
        dcCal: ::std::os::raw::c_int,
        speedUp: ::std::os::raw::c_int,
    ) -> mir_sdr_ErrT;
}
